--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "contact-management-app",
   "version": "0.1.0",
   "private": true,
-  "homepage": "https://github.com/Lokesh777/contact_management",
+  "homepage": "https://app.netlify.com/",
   "dependencies": {
     "@reduxjs/toolkit": "^2.2.7",
     "@tanstack/react-query": "^5.55.4",
